fix z-index issue

--- a/web/static/app/layout/_embed.sass
+++ b/web/static/app/layout/_embed.sass
@@ -63,6 +63,7 @@ body.embed
         right: 0
         bottom: 0
         left: 0
+        z-index: 3
 
         &_list
             display: flex
